V00-02-07 08-26-09 John Jacobsen john@mail.npxdesigns.com
0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set.
==============================================================

V00-02-06 05-18-09 John Jacobsen john@mail.npxdesigns.com
0003248 (DOM-MB): Make sure flasherboard gets disabled at end of run and allow surface to change FB settings mid-run (add test)
0003253: flasher tests fail on PCTS
==============================================================

V00-02-05 08-01-08 John Jacobsen john@mail.npxdesigns.com
0002799: FADCClockPollutionTest fails
==============================================================

V00-02-04 08-01-08 John Jacobsen john@mail.npxdesigns.com
0002797: Add non-HV version of pedestal stability test
0002798: Add 'Clock Pollution Test' for FADC
0002793: Occasional MinimumBiasTest failures
0002790: Occasional SLCOnlyHVTest failures
0002789: Occasional SLCOnlyPulserTest failures
0002788: Add option to repeat entire test cycle
0002787: Add option to suppress reporting of successful tests
==============================================================

V00-02-03 07-18-08 John Jacobsen john@mail.npxdesigns.com
0002572: Implement [test] icetop minbias hits
0001529: Some DOMs have bad ATWD chips and we need to be able to configure pDAQ so that only one chip gets read out
==============================================================

V00-02-02 11-29-07 John Jacobsen john@mail.npxdesigns.com
Issues:
0002071: UploadDOMs.py - Retry softboot/open/get iceboot prompt sequence in case of 'dropped doms'
0002070: UploadDOMs.py - Timeout for gunzip step is too short
0002079: domapptest.py - Fix maxint warning under RHEL4
0002081: domapptest.py - MessageSizePulserTest fails on pcts-hub02
0002087: domapptest.py - Futurewarnings on pcts-hub02 (RHEL4)
==============================================================

V00-02-01 11-13-07 John Jacobsen john@mail.npxdesigns.com
Issues:
0001903: Make MB upload procedure bulletproof