@@ -1,3 +1,7 @@
+V00-02-08 08-26-09 John Jacobsen john@mail.npxdesigns.com
+0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set (improved test)
+==============================================================
+
 V00-02-07 08-26-09 John Jacobsen john@mail.npxdesigns.com
 0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set.
 ==============================================================
